2002-11-20  Maciej Stachowiak  <mjs@apple.com>

        * kjs/collector.cpp:
        (Collector::allocate): Clear the flags on newly allocated objects.

2002-11-20  Darin Adler  <darin@apple.com>

	- oops, checked in big regression instead of 5% speedup

        * kjs/function.cpp: (ActivationImp::ActivationImp): Make a marking
	list, not a refing list.

	- a cut at the sparse array implementation

        * kjs/array_instance.h: Keep storageLength separate from length.
        * kjs/array_object.cpp:
        (ArrayInstanceImp::ArrayInstanceImp): Start with storageLength == length.
        (ArrayInstanceImp::get): Check against storage length.
        (ArrayInstanceImp::put): Ditto.
        (ArrayInstanceImp::hasProperty): Ditto.
        (ArrayInstanceImp::deleteProperty): Ditto.
        (ArrayInstanceImp::setLength): Only enlarge storage length up to a cutoff.
        (ArrayInstanceImp::mark): Use storageLength.
        (ArrayInstanceImp::pushUndefinedObjectsToEnd): Added FIXME.

2002-11-20  Darin Adler  <darin@apple.com>

	- decrease ref/deref -- 5% speedup in iBench

        * JavaScriptCore.pbproj/project.pbxproj: Added array_instance.h
        * kjs/array_instance.h: Added so it can be shared by function.h.

        * kjs/array_object.cpp:
        * kjs/array_object.h:
        * kjs/bool_object.cpp:
        * kjs/bool_object.h:
        * kjs/collector.cpp:
        * kjs/date_object.cpp:
        * kjs/date_object.h:
        * kjs/error_object.cpp:
        * kjs/function.cpp:
        * kjs/function.h:
        * kjs/function_object.cpp:
        * kjs/internal.cpp:
        * kjs/internal.h:
        * kjs/math_object.cpp:
        * kjs/nodes.cpp:
        * kjs/number_object.cpp:
        * kjs/object.cpp:
        * kjs/object.h:
        * kjs/object_object.cpp:
        * kjs/property_map.cpp:
        * kjs/reference.cpp:
        * kjs/reference.h:
        * kjs/regexp_object.cpp:
        * kjs/string_object.cpp:
        * kjs/string_object.h: